# weave

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
accounts/: apps.py  forms.py  models.py  urls.py  views.py
accounts/management/commands/: import_accounts.py
accounts/migrations/: 0001_initial.py  0002_alter_profile_user.py  0003_alter_profile_location.py
accounts/templates/: login.html  profile.html  profile_update.html  register.html
ai_agent/: forms.py  urls.py  utils.py  views.py
ai_agent/templates/: ai_article_create.html
app/: settings.py  urls.py  views.py
app/templates/: base.html  home.html
app/templates/components/: _articles.html  _footer.html  _header.html  _sidebar.html
articles/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
articles/management/commands/: import_articles.py  import_tags.py
articles/migrations/: 0001_initial.py  0002_article_resume_alter_article_title.py  0003_tag_article_tags.py
articles/templates/: article_confirm_delete.html  article_create.html  article_delete.html  article_detail.html  article_form.html  article_list.html  article_update.html
data/: accounts.csv  articles.csv  tags.csv
docs/: about.md  guide.md  index.md
docs/apps/: accounts.md  ai_agent.md  articles.md
secrets/: .env.example
