[project]
name = "django-blog-project"
version = "0.1.0"
description = "Weave é uma rede social para a comunidade de tecnologia, inspirada no Twitter, DevMedia, entre outros. Tem como grande diferencial, escrita de artigos em Markdown e uso de IA para melhorar ou escrever seus conteúdos postados."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-redis>=6.0.0",
    "firebase-admin>=7.1.0",
    "google-genai>=1.39.1",
    "markdown>=3.9",
    "pillow>=11.3.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "ruff>=0.13.2",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = [
    'migrations',
    'settings.py',
    'manage.py',
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'

build = 'docker-compose build --no-cache'
post_build = 'task run'

pre_run = 'task format'
run = 'docker-compose up'
rund = 'docker-compose up -d'

down = 'docker-compose stop && docker-compose down -v'

pre_migrate = 'python manage.py makemigrations'
migrate = 'python manage.py migrate'

app = 'python manage.py startapp'
