[project]
name = "django-blog-project"
version = "0.1.0"
description = "Weave é uma rede social para a comunidade de tecnologia, inspirada no Twitter, DevMedia, entre outros. Tem como grande diferencial, escrita de artigos em Markdown e uso de IA para melhorar ou escrever seus conteúdos postados."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-redis>=6.0.0",
    "firebase-admin>=7.1.0",
    "google-genai>=1.39.1",
    "gunicorn>=23.0.0",
    "markdown>=3.9",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "ruff>=0.13.2",
    "taskipy>=1.14.1",
]
doc = []

[tool.ruff]
line-length = 79
extend-exclude = [
    'migrations',
    'settings.py',
    'manage.py',
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'

pre_run = 'task format && docker-compose up -d'
run = 'python manage.py runserver'

pre_down = 'docker-compose stop'
down = 'docker-compose down -v'

pre_migrate = 'python manage.py makemigrations'
migrate = 'python manage.py migrate'

app = 'python manage.py startapp'

docs = 'mkdocs serve --dev-addr localhost:8080'
